initial object showing questions and the timer runs for each question.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,15 @@
 /* Main style sheet */
+body{
+   
+    background: cornflowerblue;
+    color:lightskyblue
+}
+header{
+    padding: 10px ;
+    line-height: 20px;
+    height:100px;
+    background: black;
+}
+.container{
+   font-style: italic;
+}
